<resources>
    <string name="app_name">MPOS</string>
    <string name="yes_text">YES</string>
    <string name="no_text">NO</string>
    <string name="alert_invalid_date">Invalid Date</string>
    <string name="alert_invalid_expiry_date">Expiry Date cannot be today or earlier</string>
    <string name="alert_print_sucess">Successfully printed</string>
    <string name="alert_print_failure">Unable to print [Returned false from server]</string>
    <string name="alert_print_communication_error">Invalid Parameters being sent to server</string>
    <string name="welcome_message">Welcome to </string>
    <string name="username">User Name:</string>
    <string name="servername">Server Name:</string>
    <string name="user_access_message">Login another User to get access</string>
    <string name="password">Password:</string>
    <string name="logout">Log Out</string>
    <string name="switch_user">Switch User</string>
    <string name="setting_pref">Settings &amp; Preferences</string>
    <string name="update_master">Update Master</string>
    <string name="hold_txn">Held Transaction</string>
    <string name="floatstring">Float Pick Up Petty Cash</string>
    <string name="print">Print</string>
    <string name="re_print">Re-Print</string>
    <string name="cust_details">Customer Details</string>
    <string name="zreport">Z Report</string>
    <string name="calculator">Calculator</string>
    <string name="search">Search</string>
    <string name="scan">Scan</string>
    <string name="void_iem">Void Iem</string>
    <string name="price_change">Price Change</string>
    <string name="new_sale">New Sale</string>
    <string name="change">Change</string>
    <string name="change_issued">Changes Issued -</string>
    <string name="change_still_due">Change Still Due - </string>
    <string name="customer">Customer</string>
    <string name="held_time">Time</string>
    <string name="held_date">Date</string>
    <string name="sales_person">Sales Person</string>
    <string name="select_sales_person">Select Sales Person</string>
    <string name="issue_change">Issue Change</string>
    <string name="hold">Hold</string>
    <string name="held_transactions_title">Held Transactions</string>
    <string name="held_transactions">Transaction No</string>
    <string name="held_load_btn">Load</string>
    <string name="load_transactions">Load Transaction (Enter Transaction No. of completed transaction)</string>
    <string name="search_hint">Enter Wildcard(s) or product code/name to search or do a price check</string>
    <string name="alert_invalid_search_input">Invalid search input</string>
    <string name="payment_refund">Payment/Issue Change</string>
    <string name="payment">Payment</string>
    <string name="refund">Refund</string>
    <string name="select_amount">Select Amount:</string>
    <string name="add_btn">Add</string>
    <string name="select_currency">Select Currency:</string>
    <string name="name_on_card">Name On Card</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="authorization_code">Authorization Code</string>
    <string name="notes">Notes</string>
    <string name="acc_name">Name on Account</string>
    <string name="cheque_number">Cheque Number</string>
    <string name="cheque_date">Cheque Date</string>
    <string name="account_number">Account Number</string>
    <string name="bank_code">Bank/Branch Code</string>
    <string name="voucher_number">Voucher Number</string>
    <string name="issue_date">Issue Date</string>
    <string name="credit_note_numbet">Credit Note Number</string>
    <string name="cash">Cash</string>
    <string name="credit_card">Credit Card</string>
    <string name="credit_note">Credit Note</string>
    <string name="voucher">Voucher</string>
    <string name="cheque">Cheque</string>
    <string name="amount">Amount</string>
    <string name="total_payments">Total Payments</string>
    <string name="total_payments_remaining">Total Payments Remaining:</string>
    <string name="no_print">No Printer</string>
    <string name="total_change_issued">Total change issued -</string>
    <string name="payment_due">Payment Due</string>
    <string name="payment_due_rounded">Payment Due (rounded)</string>
    <string name="change_due">Total change due - </string>
    <string name="cancel">Cancel</string>
    <string name="view_print">View/Print</string>
    <string name="verify">Verify</string>
    <string name="logout_update">Update/Log Out</string>
    <string name="done">Done</string>
    <string name="ok">OK</string>
    <string name="local_printer">Local Printer</string>
    <string name="kitchen_printer">Kitchen Printer</string>
    <string name="bill_printer">Bill Printer</string>
    <string name="bill">Bill</string>
    <string name="close">Close</string>
    <string name="delete">Delete</string>
    <string name="user_interface">User Interface Language</string>
    <string name="show_bill">Show Bill Panel on</string>
    <string name="lock_orientation">   Lock Orientation   </string>
    <string name="session_timeout">Session Timeout</string>
    <string name="enter_amount">Enter Amount:</string>
    <string name="enter_num_bills">Enter No. of Bills/coins</string>
    <string name="select_denominations">Select Denominations</string>
    <string name="issu_description">Description</string>
    <string name="prepare_z_report">Prepare Z-Report</string>
    <string name="description">Description</string>
    <string name="float_pty_pckUp_alert_title">Float, Pickup &amp; Petty Cash</string>
    <string name="group">Group</string>
    <string name="dpt">Department</string>
    <string name="analys">Analys</string>
    <string name="binloc">BinLocation</string>
    <string name="product">Products</string>
    <string name="navigation_flow">Category Navigation</string>
    <string name="type">Type</string>
    <string name="item_details">Item Details</string>
    <string name="quantity">Quantity:</string>
    <string name="enter_qty">Enter quantity</string>
    <string name="price">Price:</string>
    <string name="prc_description">Description:</string>
    <string name="ext_prce">existing price</string>
    <string name="ext_desc">existing description</string>
    <string name="qty">Qty</string>
    <string name="measure_heading">Measures:</string>
    <string name="modifier_heading">Modifiers / Instructions:</string>
    <string name="extra_instr">Enter any other instructions here</string>
    <string name="alert">Alert!</string>
    <string name="alert_wrong_qty">Wrong Quantity! Please select Valid Quantity.</string>
    <string name="alert_invalid_price">Invalid Price! Please add Valid Price.</string>
    <string name="alert_implementation_progress">This feature implementation in progress.</string>
    <string name="alert_wrong_amt">Wrong Amount! Please enter valid amount.</string>
    <string name="alert_extra_amt">Wrong Amount! Amount should not be more than Total Payment Remaining.</string>
    <string name="alert_less_amt">Wrong Amount! Amount should not be less than Total Payment Remaining.</string>
    <string name="alert_issue_entry_present">Issue change entries are made. Are you sure?.</string>
    <string name="alert_issue_discard">Discard Issue Change.</string>
    <string name="alert_wrong_inputs">Wrong Information! Please enter valid Info.</string>
    <string name="prdct_measure">Measure</string>
    <string name="prdct_modifier">Modifier</string>
    <string name="prdct_no_measure">No Measures Available</string>
    <string name="prdct_no_modifier">No Modifier/Instruction Available</string>
    <string name="alert_void_bill_panel">This will clear the current bill. Do you want to hold it instead?</string>
    <string name="alert_hold_bill_panel">Are you sure?</string>
    <string name="alert_update_master">Are you sure? The update can take a while.</string>
    <string name="alert_switch_user">This will change user.</string>
    <string name="alert_sell_below_cost">Sell below cost price not allowed.</string>
    <string name="button_login">Login</string>
    <string name="alert_bill_sent_print">Current Bill is sent for</string>
    <string name="total_sales">Total Sales</string>
    <string name="z_total">Total</string>
    <string name="alert_network">No Internet Connection Available.</string>
    <string name="alert_invalid_modifier">Please select Modifier.</string>
    <string name="alert_invalid_modifier_qty">Please enter Modifier Quantity.</string>
    <string name="alert_invalid_measure">Please select atleast one Measure.</string>
    <string name="alert_message">Message</string>
    <string name="alert_invalid_saleman">Please Select the SalesMan.</string>
    <string name="alert_logout">Do you want to logout?</string>
    <string name="barcode_label">Barcode</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="button_google_shopper">Google Shopper</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_default_format">Format</string>
    <string name="button_ok">OK</string>
    <string name="result_product">Found product</string>
    <string name="result_text">Found plain text</string>
    <string name="radio_float">Float</string>
    <string name="radio_pickup">Pickup</string>
    <string name="radio_petty">Petty Cash</string>
    <string name="radio_paymnts">Payment</string>
    <string name="radio_issuChng">Change</string>
    <string name="enter_amt">Enter Amount:</string>
    <string name="enter_dtls">Enter Details</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
    <string name="preferences_bulk_mode_title">Bulk scan mode</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
    <string name="preferences_custom_product_search_title">Custom search URL</string>
    <string name="preferences_decode_1D_title">1D barcodes</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
    <string name="preferences_front_light_title">Use front light</string>
    <string name="preferences_general_title">General settings</string>
    <string name="preferences_name">Settings</string>
    <string name="preferences_play_beep_title">Beep</string>
    <string name="preferences_remember_duplicates_summary">Store multiple scans of the same barcode in History</string>
    <string name="preferences_remember_duplicates_title">Remember duplicates</string>
    <string name="preferences_reverse_image_summary">Enable on devices with a front camera only</string>
    <string name="preferences_reverse_image_title">Reversed camera image</string>
    <string name="preferences_result_title">Result settings</string>
    <string name="preferences_scanning_title">When scanning for barcodes, decode\u2026</string>
    <string name="preferences_search_country">Search country</string>
    <string name="preferences_supplemental_summary">Try to retrieve more information about the barcode contents</string>
</resources>