<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/topHeldLL"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dip"
    android:layout_marginTop="5dip"
    android:background="@color/Light_Gray"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="2dip"
    android:weightSum="1" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/txnText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/held_transactions"
            android:textColor="@color/Black"
            android:textSize="18sp" />

        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:background="@color/Black" />

        <TextView
            android:id="@+id/dateText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/held_date"
            android:textColor="@color/Black"
            android:textSize="18sp" />

        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:background="@color/Black" />

        <TextView
            android:id="@+id/timeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/held_time"
            android:textColor="@color/Black"
            android:textSize="18sp" />

        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:background="@color/Black" />
    </LinearLayout>

    <TextView
        android:id="@+id/customerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/customer"
        android:textColor="@color/Black"
        android:textSize="18sp" />

</LinearLayout>