<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/top_qty_prce_mesr_instr_rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip" >

        <LinearLayout
            android:id="@+id/scrollTopLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/qty_price_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1" >

                <LinearLayout
                    android:id="@+id/qty_rl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".4"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/qty_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dip"
                        android:text="@string/quantity"
                        android:textColor="@color/Black"
                        android:textStyle="bold" >
                    </TextView>

                    <EditText
                        android:id="@+id/qty_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dip"
                        android:layout_marginRight="5dip"
                        android:hint="@string/enter_qty"
                        android:inputType="numberDecimal"
                        android:textColor="@color/Black" >
                    </EditText>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/price_rl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".6"
                    android:orientation="vertical" >

                    <RelativeLayout
                        android:id="@+id/exit_price_ll"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/price_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@+id/price_et"
                            android:text="@string/price"
                            android:textColor="@color/Black"
                            android:textStyle="bold" >
                        </TextView>

                        <EditText
                            android:id="@+id/price_et"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignLeft="@+id/desc_et"
                            android:layout_toRightOf="@+id/price_tv"
                            android:hint="@string/ext_prce"
                            android:inputType="numberDecimal"
                            android:textColor="@color/Black" >
                        </EditText>

                        <TextView
                            android:id="@+id/desc_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@+id/desc_et"
                            android:layout_below="@+id/price_tv"
                            android:layout_marginRight="10dip"
                            android:layout_marginTop="10dip"
                            android:text="@string/prc_description"
                            android:textColor="@color/Black"
                            android:textStyle="bold" >
                        </TextView>

                        <EditText
                            android:id="@+id/desc_et"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/price_et"
                            android:layout_marginTop="10dip"
                            android:layout_toRightOf="@+id/desc_tv"
                            android:editable="false"
                            android:focusable="false"
                            android:hint="@string/ext_desc"
                            android:imeOptions="actionNext"
                            android:inputType="none"
                            android:textColor="@color/Black" >
                        </EditText>
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/mesure_heading_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dip"
                android:text="@string/measure_heading"
                android:textColor="@color/Black"
                android:textStyle="bold" >
            </TextView>

            <LinearLayout
                android:id="@+id/measuerLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
            </LinearLayout>

            <TextView
                android:id="@+id/modifier_heading_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dip"
                android:text="@string/modifier_heading"
                android:textColor="@color/Black"
                android:textStyle="bold" >
            </TextView>

            <LinearLayout
                android:id="@+id/modifierLL"
                android:layout_width="match_parent"
                android:layout_marginLeft="2dip"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
            </LinearLayout>

            <EditText
                android:id="@+id/extra_instr_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/extra_instr"
                android:imeOptions="actionDone"
                android:textColor="@color/Black" >
            </EditText>

            <LinearLayout
                android:id="@+id/bottomBtnLL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="15dip"
                android:layout_marginRight="15dip"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/cancelBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dip"
                    android:layout_toLeftOf="@+id/doneBtn"
                    android:background="@drawable/cancel237x57_selector" >
                </Button>

                <Button
                    android:id="@+id/doneBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/done237x57_selector" >
                </Button>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/dummy_id"
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical" />

</RelativeLayout>