<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:minHeight="200dip"
    android:minWidth="700dip"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radioFloat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dip"
            android:checked="true"
            android:text="@string/radio_float"
            android:textColor="@color/Black"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioPickUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dip"
            android:text="@string/radio_pickup"
            android:textColor="@color/Black"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioPeetyCash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_petty"
            android:textColor="@color/Black"
            android:textStyle="bold" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/amtCurrll"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/amtll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dip"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/enterAmttv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dip"
                android:text="@string/enter_amt"
                android:textColor="@color/Black"
                android:textStyle="bold" >
            </TextView>

            <EditText
                android:id="@+id/amtEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="10dip"
                android:hint="@string/enter_amt"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/currencyll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/currencytv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dip"
                android:text="@string/select_currency"
                android:textColor="@color/Black"
                android:textStyle="bold" >
            </TextView>

            <Spinner
                android:id="@+id/currncySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:layout_marginTop="10dip" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/enterDetailsll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/enterDetailstv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="15dip"
            android:text="@string/enter_dtls"
            android:textColor="@color/Black"
            android:textStyle="bold" >
        </TextView>

        <EditText
            android:id="@+id/dtlsEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="5dip"
            android:enabled="false"
            android:hint="@string/enter_dtls"
            android:imeOptions="actionDone"
            android:inputType="text" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:gravity="right"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:background="@drawable/cancel237x57_selector" >
        </Button>

        <Button
            android:id="@+id/doneBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/done237x57_selector" >
        </Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dummy_id"
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical" />

</LinearLayout>